--- a/src/main/resources/static/web/styles/style.css
+++ b/src/main/resources/static/web/styles/style.css
@@ -42,3 +42,9 @@ table {
     /*margin: 0 auto;*/
     /*padding: 1%;*/
 }
+.notgm{
+    font-size: 300%;
+    font-weight: bold;
+    background-color: yellow;
+    text-align: center;
+}
