--- a/src/main/resources/static/web/styles/style.css
+++ b/src/main/resources/static/web/styles/style.css
@@ -64,16 +64,43 @@
 }
 .placeShips{
     display: flex;
-    justify-content: space-between;
+    margin: 5% 10%;
 
 }
 .shipsboard{
-    border: solid 1px black;
+    /*border: solid 1px black;*/
     width: 400px;
     height: 400px;
+    margin: 0 10% 0 10%;
 }
 table {
     border-collapse: collapse;
+}
+#logOutBtn, .ok{
+    border-radius: 10px;
+    padding: 1%;
+    color: white;
+    background-color: black;
+}
+#logOutBtn{
+    position: absolute;
+    right: 50px;
+}
+.ok{
+    width: 10%;
+    justify-self: center;
+    align-self: center;
+}
+.statusok{
+    display: flex;
+    flex-direction:column;
+}
+.statusships{
+    margin-top: 2%;
+    font-size: 60px;
+    font-weight: bolder;
+    font-family: monospace;
+    text-align: center;
 }
 
 .ships {
