--- a/src/main/resources/static/web/styles/style.css
+++ b/src/main/resources/static/web/styles/style.css
@@ -1,14 +1,16 @@
 .tables td, .board td {
     padding: 0;
     margin: 0;
-    border: solid 1px black;
+    border: solid 1px white;
     border-collapse: collapse;
     width: 48px;
     height: 49px;
     text-align: center;
     font-weight: bold;
     display: flex;
+    /*background-color: rgba(255,255,255,0.16);*/
 }
+
 .tables tr, .board tr {
     display:flex;
     flex-direction: row;
@@ -21,7 +23,7 @@
 
     width:149px;
     height:50px;
-    background-color: deeppink;
+    background-color: black;
     position:absolute;
 
 }
@@ -76,7 +78,7 @@
 table {
     border-collapse: collapse;
 }
-#logOutBtn, .ok{
+button{
     border-radius: 10px;
     padding: 1%;
     color: white;
@@ -85,6 +87,12 @@ table {
 #logOutBtn{
     position: absolute;
     right: 50px;
+}
+#login-form input{
+    background-color: #ffffff29;
+    border-radius: 10px;
+    padding:0.5%;
+    color:white;
 }
 .ok{
     width: 10%;
@@ -138,4 +146,18 @@ table {
     font-weight: bold;
     background-color: yellow;
     text-align: center;
+}
+
+[data-style="gamesview"]{
+    background-image: url("images/SbaPLTm.jpg");
+    color: white;
+    font-family: monospace;
+    font-size: 150%;
+}
+
+[data-style="gameview"]{
+    background-image: url("images/galaxy.jpg");
+    color: white;
+    font-family: monospace;
+    font-size: 150%;
 }
