salvos front and backend

--- a/src/main/resources/static/web/styles/style.css
+++ b/src/main/resources/static/web/styles/style.css
@@ -114,7 +114,12 @@ button{
 .ships {
     background-color: pink;
 }
-
+.salvoshot{
+    background-color:red;
+}
+#oksalvo{
+    display:none;
+}
 .salvo0 {
     background-color: orange;
 }
